[gd_scene load_steps=4 format=3 uid="uid://bc5p1meq10uah"]

[ext_resource type="Script" uid="uid://dnisdd83enf8r" path="res://script/appbank_scene.gd" id="1_268i2"]
[ext_resource type="Texture2D" uid="uid://ugohmeskwq67" path="res://assets/appbank.png" id="2_eqfcm"]
[ext_resource type="Script" uid="uid://do02kwcb8vapn" path="res://script/transparent_button.gd" id="4_7dg0d"]

[node name="AppbankScene" type="Node2D"]
script = ExtResource("1_268i2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1077, 367)
scale = Vector2(1.00233, 0.839306)
texture = ExtResource("2_eqfcm")

[node name="BankLayer" type="CanvasLayer" parent="."]

[node name="balance" type="Label" parent="BankLayer"]
offset_left = 963.0
offset_top = 234.0
offset_right = 1159.0
offset_bottom = 281.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="confirm" type="Button" parent="BankLayer"]
offset_left = 1033.0
offset_top = 568.0
offset_right = 1122.0
offset_bottom = 596.0
script = ExtResource("4_7dg0d")

[node name="back" type="Button" parent="BankLayer"]
offset_left = 904.0
offset_top = 58.0
offset_right = 936.0
offset_bottom = 89.0
script = ExtResource("4_7dg0d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="loan1000" type="Button" parent="CanvasLayer"]
offset_left = 963.0
offset_top = 378.0
offset_right = 1170.0
offset_bottom = 420.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "1000刀乐
"
script = ExtResource("4_7dg0d")

[node name="loan2000" type="Button" parent="CanvasLayer"]
offset_left = 965.0
offset_top = 431.0
offset_right = 1172.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2000刀乐"
script = ExtResource("4_7dg0d")

[node name="loan3000" type="Button" parent="CanvasLayer"]
offset_left = 968.0
offset_top = 473.0
offset_right = 1178.0
offset_bottom = 515.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3000刀乐"
script = ExtResource("4_7dg0d")

[node name="loan4000" type="Button" parent="CanvasLayer"]
offset_left = 972.0
offset_top = 521.0
offset_right = 1181.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "4000刀乐"
script = ExtResource("4_7dg0d")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "提示"
position = Vector2i(980, 200)
size = Vector2i(200, 100)

[node name="Label" type="Label" parent="AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 51.0
text = "贷款成功"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BankLayer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="BankLayer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/loan1000" to="." method="_on_loan_1000_pressed"]
[connection signal="pressed" from="CanvasLayer/loan2000" to="." method="_on_loan_2000_pressed"]
[connection signal="pressed" from="CanvasLayer/loan3000" to="." method="_on_loan_3000_pressed"]
[connection signal="pressed" from="CanvasLayer/loan4000" to="." method="_on_loan_4000_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
